--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Glenn, Deevesh, Chanho, Gemma, Dimitri",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
