--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.17",
+    "moongoose": "0.0.5"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.2.0",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   }
 }
