--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/*.js --exit"
   },
   "author": "Glenn, Deevesh, Chanho, Gemma, Dimitri",
   "license": "ISC",
