--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "chai-subset": "^1.6.0",
     "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
